--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     font-family: "Poppins", sans-serif;
 }
 body{
-    width: 100vw;
+    max-width: 100vw;
 }
 nav{
     background-color: black;
@@ -37,9 +37,6 @@ nav .name{
     font-family: "Playwrite GB S", cursive;
     margin: 0 20px;
 }
-table{
-    border: 2px solid black;
-}
 .container{
     width: 80vw;
     margin: 25px auto;
@@ -61,5 +58,25 @@ table{
     margin: 10px 0;
 }
 .btn:hover{
+    color: rgb(218, 217, 217);
+}
+table{
+    border: 2px solid black;
+    border-collapse: collapse;
+}
+th, td{
+    border: 2px solid black;
+    border-collapse: collapse;
+    padding: 10px 25px;
+}
+.btn2{
+    padding: 7px 15px;
+    color: white;
+    background-color: black;
+    border-radius: 10px;
+    font-size: 16px;
+    cursor: pointer;
+}
+.btn2:hover{
     color: rgb(218, 217, 217);
 }
