--- a/style.css
+++ b/style.css
@@ -7,9 +7,6 @@
     padding: 0;
     font-family: "Poppins", sans-serif;
 }
-body{
-    max-width: 100vw;
-}
 nav{
     background-color: black;
     color: white;
@@ -18,16 +15,18 @@ nav{
     align-items: center;
     padding: 0.5vw;
     max-width: 99vw;
+    position: sticky;
 }
 nav ul{
     display: flex;
     gap: 15px;
-    margin: 0 20px;
+    margin: 0 10px;
 }
 nav ul li{
     list-style: none;
     cursor: pointer;
     font-size: 18px;
+    margin: 0 2px;
 }
 nav ul li:hover{
     color:rgb(211, 211, 211);
@@ -44,6 +43,7 @@ nav .name{
     flex-direction: column;
     align-items: flex-start;
     gap: 10px;
+    overflow: scroll;
 }
 .container p{
     font-size: 20px;
@@ -63,11 +63,15 @@ nav .name{
 table{
     border: 2px solid black;
     border-collapse: collapse;
+    width: 60vw;
 }
 th, td{
     border: 2px solid black;
     border-collapse: collapse;
-    padding: 10px 25px;
+    width: 10vw;
+    text-align: center;
+    text-overflow: ellipsis;
+    padding: 5px 5px;;
 }
 .btn2{
     padding: 7px 15px;
